added about and projects

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,38 +1,38 @@
 <div class="bg-white px-3 py-6 text-gray-700 screen-size">
   <div
-    class="flex flex-col md:flex-row mx-auto mt-4 max-w-[92.5rem] justify-center items-center"
+    class="flex flex-col mx-auto mt-4 max-w-[92.5rem] lg:justify-center lg:items-center"
   >
-    <div class="w-1/2 h-[40rem] flex flex-col mt-[8rem] px-6">
-      <h1 class="text-[4rem] text-left text-gray-800 font-bold">Hi there</h1>
-      <h2 class="text-[4rem] text-left text-gray-800 font-bold">
-        I'm Stranger 👋
-      </h2>
+    <div class="p-10 mx-auto">
+      <img
+        src="../../assets/me.png"
+        alt="Developer"
+        class="w-[15rem] bg-red-100 gray-scale object-cover rounded-full mb-10"
+      />
+    </div>
+    <div class="flex flex-col px-6">
+      <h1
+        class="text-5xl md:text-[4rem] leading-[4rem] text-center text-gray-800 font-bold"
+      >
+        Hello there, I'm <span class="text-orange-600">Stranger</span>
+      </h1>
 
-      <h3 class="text-2xl text-left text-gray-600 my-4">
+      <h3
+        class="text-2xl mx-auto text-center text-gray-600 mt-10 md:mt-[2rem] md:my-4"
+      >
         Web Developer | JavaScript Enthusiast
       </h3>
 
-      <p class="text-left text-xl max-w-lg mt-8 text-gray-600">
+      <p
+        class="text-left tex-md mx-auto px-10 md:px-0 md:text-xl md:max-w-[30rem] xl:max-w-[40rem] mt-8 text-gray-600"
+      >
         I'm a web developer based in Cape Town, South Africa 🇿🇦. I specialize in
         building websites and web applications using modern technologies like
         GraphQL, Angular, and Node.js.
       </p>
 
-      <!-- socials -->
-      <div class="flex items-center space-x-4 mt-10">
-        <img
-          src="../../assets/github.svg"
-          alt="Github link"
-          class="w-8 cursor-pointer"
-        />
-        <img
-          src="../../assets/linkedin.svg"
-          alt="Linkedin link"
-          class="w-8 cursor-pointer"
-        />
-      </div>
-
-      <div class="flex mt-10">
+      <div
+        class="flex flex-col w-[60%] md:w-fit mx-auto md:flex-row space-y-3 md:space-y-0 mt-10"
+      >
         <a
           href="#"
           class="bg-black text-white py-3 px-10 rounded-lg text-lg font-semibold"
@@ -43,60 +43,6 @@
           class="bg-transparent text-black py-3 px-4 rounded-lg text-lg font-semibold ml-4"
           >Download CV</a
         >
-      </div>
-    </div>
-    <div class="w-1/2 rounded-t-full group">
-      <div
-        class="border-2 border-purple-600 h-64 bg-purple-800 relative rounded-full w-[50rem] flex items-center justify-center"
-      >
-        <img
-          src="../../assets/me.png"
-          alt="Developer"
-          class="h-[46rem] z-1 w-full group-hover: gray-scale object-cover rounded-full mb-20"
-        />
-
-        <div class="languages">
-          <img
-            src="../../assets/node.png"
-            alt="a"
-            class="absolute top-[20rem] left-[50rem] w-[5rem]"
-          />
-          <img
-            src="../../assets/ts.png"
-            alt="a"
-            class="absolute top-[-10rem] right-[36rem] w-[5rem]"
-          />
-
-          <img
-            src="../../assets/javascript.png"
-            alt="a"
-            class="absolute top-[0rem] right-[10rem] w-[5rem]"
-          />
-
-          <img
-            src="../../assets/angular.png"
-            alt="a"
-            class="absolute top-[10rem] right-[40rem] w-[5rem]"
-          />
-
-          <img
-            src="../../assets/graphql.png"
-            alt="a"
-            class="absolute top-[-10rem] right-[0rem] w-[5rem]"
-          />
-
-          <img
-            src="../../assets/psql.png"
-            alt="a"
-            class="absolute top-[20rem] right-[20rem] w-[5rem]"
-          />
-
-          <img
-            src="../../assets/aws.png"
-            alt="a"
-            class="absolute top-[-15rem] right-[10rem] w-[5rem]"
-          />
-        </div>
       </div>
     </div>
   </div>
