--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,23 @@
+<div class="bg-red-400">
+  <div
+    class="flex flex-col justify-end text-white py-3 space-y-1 md:flex-row md:space-y-0 md:space-x-2"
+  >
+    <div class="flex items-center mx-auto space-x-4">
+      <img
+        src="../../assets/github.svg"
+        alt="Github link"
+        class="w-8 cursor-pointer"
+      />
+      <img
+        src="../../assets/linkedin.svg"
+        alt="Linkedin link"
+        class="w-8 cursor-pointer"
+      />
+    </div>
+  </div>
+</div>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<div class="max-w-[92.5rem] mx-auto p-4 text-gray-600">
+<!-- <div class="max-w-[92.5rem] mt-auto mx-auto p-4 text-gray-600">
   <small>Copyright © 2024. All rights reserved.</small>
-</div>
+</div> -->
