--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -34,7 +34,8 @@
         class="flex flex-col w-[60%] md:w-fit mx-auto md:flex-row space-y-3 md:space-y-0 mt-10"
       >
         <a
-          href="#"
+          href="javascript:void(0)"
+          [routerLink]="['/contact']"
           class="bg-black text-white py-3 px-10 rounded-lg text-lg font-semibold"
           >Hire me</a
         >
