--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,27 @@
     class="flex flex-col justify-end text-white py-3 space-y-1 md:flex-row md:space-y-0 md:space-x-2"
   >
     <div class="flex items-center mx-auto space-x-4">
-      <img
-        src="../../assets/github.svg"
-        alt="Github link"
-        class="w-8 cursor-pointer"
-      />
-      <img
-        src="../../assets/linkedin.svg"
-        alt="Linkedin link"
-        class="w-8 cursor-pointer"
-      />
+      <a href="https://github.com/strangermushwana" target="_blank">
+        <img
+          src="../../assets/github.svg"
+          alt="Github link"
+          class="w-8 cursor-pointer"
+        />
+      </a>
+      <a href="https://www.linkedin.com/in/strangermushwana" target="_blank">
+        <img
+          src="../../assets/linkedin.svg"
+          alt="LinkedIn link"
+          class="w-8 cursor-pointer"
+        />
+      </a>
+      <a href="https://www.credly.com/users/stranger/badges" target="_blank">
+        <img
+          src="../../assets/credly.svg"
+          alt="Twitter link"
+          class="w-8 cursor-pointer"
+        />
+      </a>
     </div>
   </div>
 </div>
