--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,17 +1,18 @@
 <div class="max-w-6xl mt-10 p-4 mx-auto">
   <h1 class="text-4xl font-bold text-center">My Projects</h1>
   <div class="grid grid-cols-1 gap-4 mt-10 md:grid-cols-2 lg:grid-cols-3">
-    <div
-      class="flex bg-white shadow-lg rounded-lg px-10 pt-10 pb-2 border-b-8 border-emerald-700"
+    @for (item of projects; track $index) {
+    <!-- <div
+      class="flex bg-white shadow-lg border rounded-lg px-10 pt-10 pb-2 border-b-8 border-emerald-700"
     >
       <div class="w-[80%]">
         <div class="w-48 my-6">
-          <img src="../../assets/graphql.png" alt="" class="w-16" />
+          <img [src]="item.image" alt="" class="w-16" />
         </div>
-        <h2 class="text-xl">GraphQL API</h2>
+        <h2 class="text-xl">{{ item.title }}</h2>
         <div class="my-2">
           <a
-            href="https://github.com/strangermushwana/graphql-backend"
+            [href]="item.link"
             target="_blank"
             class="text-xs hover:underline duration-300 uppercase"
           >
@@ -21,28 +22,49 @@
       </div>
       <div class="w-[20%]">
         <div class="flex flex-col h-full items-center">
+          @for (tag of item.tags; track $index) {
           <div class="flex justify-center items-center space-x-1">
-            <span class="w-2 h-2 bg-black rounded-full"></span>
-            <span class="text-xs">PostgreSQL</span>
+            <span class="text-xs">{{ tag }}</span>
           </div>
-          <div class="flex justify-center items-center space-x-1">
-            <span class="w-2 h-2 bg-yellow-500 rounded-full"></span>
-            <span class="text-xs">Node.js</span>
+          }
+        </div>
+      </div>
+    </div> -->
+    <div class="container flex justify-center">
+      <div class="max-w-sm">
+        <div
+          class="bg-white relative shadow-lg hover:shadow-xl transition duration-500 rounded-lg"
+        >
+          <img
+            class="rounded-t-lg"
+            src="https://cdn.codersociety.com/uploads/graphql-reasons.png"
+            alt=""
+          />
+          <div class="py-6 px-8 rounded-lg bg-white">
+            <h1
+              class="text-gray-700 font-bold text-2xl mb-3 hover:text-gray-900"
+            >
+              {{ item.title }}
+            </h1>
+            <p class="text-gray-700 tracking-wide">
+              {{ item.description }}
+            </p>
+            <div class="mt-8">
+              <a
+                href="{{ item.link }}"
+                target="_blank"
+                class="py-3 px-5 bg-orange-400 text-white font-bold rounded-lg shadow-md hover:shadow-lg transition duration-300"
+              >
+                View Code
+              </a>
+            </div>
           </div>
-          <div class="flex justify-center items-center space-x-1">
-            <span class="w-2 h-2 bg-green-500 rounded-full"></span>
-            <span class="text-xs">GraphQL</span>
-          </div>
-          <div class="flex justify-center items-center space-x-1">
-            <span class="w-2 h-2 bg-blue-500 rounded-full"></span>
-            <span class="text-xs">TypeScript</span>
-          </div>
-          <div class="flex justify-center items-center space-x-1">
-            <span class="w-2 h-2 bg-purple-500 rounded-full"></span>
-            <span class="text-xs">TypeORM</span>
-          </div>
+          <!-- <div class="absolute top-2 right-2 py-2 px-4 bg-white rounded-lg">
+            <span class="text-md">$150</span>
+          </div> -->
         </div>
       </div>
     </div>
+    }
   </div>
 </div>
