contact form integration

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -28,10 +28,10 @@
       <p class="text-md mt-4">
         I am a passionate and dedicated software developer with 4 years of
         professional experience in creating and maintaining web applications. My
-        expertise lies in full-stack development, where I have honed my skills
-        in both front-end and back-end technologies. I have a strong foundation
-        in JavaScript, GraphQL, TypeScript, and frameworks such as Angular,
-        Nodejs and NestJS, enabling me to build robust and scalable
+        expertise lies in full-stack development, with honed skills in both
+        front-end and back-end technologies. I have a strong foundation in
+        JavaScript, Node.js, GraphQL, TypeScript, and frameworks such as
+        Angular, Next.js, and Nest.js, enabling me to build robust and scalable
         applications.
       </p>
       <div class="mt-4">
@@ -42,10 +42,10 @@
         innovation and efficiency within the development team.
       </div>
       <div class="mt-4">
-        In my free time, I enjoy exploring new technologies, studying topics
-        such as astronomy, blockchain, and renewable energy. I am also an
-        aspiring entrepreneur, seeking to make a positive impact through
-        technology and innovation.
+        In my free time, I love exploring new technologies, cooking, watching
+        anime, playing games, and studying subjects like Astronomy, Blockchain,
+        and AI. Additionally, I am an aspiring entrepreneur, passionate about
+        making positive impact through technology and innovation.
       </div>
     </div>
     <div
