--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -19,19 +19,20 @@
       <h3
         class="text-2xl mx-auto text-center text-gray-600 mt-10 md:mt-[2rem] md:my-4"
       >
-        Web Developer | JavaScript Enthusiast
+        Software Developer | JavaScript Enthusiast
       </h3>
 
       <p
         class="text-left tex-md mx-auto px-10 md:px-0 md:text-xl md:max-w-[30rem] xl:max-w-[40rem] mt-8 text-gray-600"
       >
-        I'm a web developer based in Cape Town, South Africa 🇿🇦. I specialize in
-        building websites and web applications using modern technologies like
-        GraphQL, Angular, and Node.js.
+        I'm a Software Developer based in Cape Town, South Africa 🇿🇦,
+        specializing in building robust, scalable applications using the latest
+        technologies and best practices.
+        <br />
       </p>
 
       <div
-        class="flex flex-col w-[60%] md:w-fit mx-auto md:flex-row space-y-3 md:space-y-0 mt-10"
+        class="flex flex-col w-[60%] md:w-fit mb-5 mx-auto md:flex-row space-y-3 md:space-y-0 mt-10"
       >
         <a
           href="javascript:void(0)"
@@ -39,11 +40,12 @@
           class="bg-black text-white py-3 px-10 rounded-lg text-lg font-semibold"
           >Hire me</a
         >
-        <a
-          href="#"
+        <!-- <a
+          href="../../assets/Stranger.pdf"
+          download
           class="bg-transparent text-black py-3 px-4 rounded-lg text-lg font-semibold ml-4"
           >Download CV</a
-        >
+        > -->
       </div>
     </div>
   </div>
