--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,9 +7,11 @@
       <a
         href="javascript:void(0)"
         [routerLink]="['/']"
-        class="flex items-center py-5 px-2 text-gray-900 flex-1"
+        class="flex items-center py-5 px-2 text-gray-700 flex-1"
       >
-        <span class="font-bold text-xl lg:text-2xl">Stranger. Mushwana</span>
+        <span class="font-semibold text-xl lg:text-2xl"
+          ><span class="text-orange-600">Stranger.</span> Mushwana</span
+        >
       </a>
       <!-- Mobile Menu Button -->
       <div class="md:hidden flex items-center">
