--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
 <div
+  *ngIf="!showSuccess"
   class="flex flex-col md:flex-row justify-center items-center max-w-6xl mt-10 p-4 mx-auto"
 >
   <div
@@ -26,7 +27,13 @@
   <div class="md:w-1/2 p-6 md:p-0 w-full">
     <h1 class="text-4xl font-bold text-center">Let's chat</h1>
     <div class="mt-10">
-      <form>
+      <div *ngIf="!emailDataForm.valid && submitted" class="py-3">
+        <small class="text-red-300">
+          Please fill in the form below and I will get back to you as soon as
+          possible.
+        </small>
+      </div>
+      <form [formGroup]="emailDataForm" (ngSubmit)="onSubmit()">
         <div class="mb-6 relative">
           <label for="name" class="block mb-2 text-sm font-medium text-gray-700"
             >Name</label
@@ -39,6 +46,7 @@
           <input
             type="text"
             id="name"
+            formControlName="name"
             class="bg-gray-50 border text-sm outline-none rounded-lg w-full ps-10 p-4"
             placeholder="Homer Simpson"
           />
@@ -71,9 +79,15 @@
           <input
             type="email"
             id="email"
+            formControlName="email"
             class="bg-gray-50 border text-sm outline-none rounded-lg w-full ps-10 p-4"
             placeholder="name@example.com"
           />
+          <div *ngIf="form?.email?.errors && submitted" class="my-2">
+            <small class="text-red-200">
+              Valid email address is required.
+            </small>
+          </div>
         </div>
         <div class="mb-4">
           <label for="message" class="block text-sm font-medium text-gray-700"
@@ -82,19 +96,50 @@
           <textarea
             id="message"
             name="message"
+            formControlName="message"
             rows="6"
             class="mt-1 bg-gray-50 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:outline-none sm:text-sm"
           ></textarea>
         </div>
         <div class="my-4">
           <button
+            [disabled]="loading"
             type="submit"
             class="w-full flex bg-black justify-center py-3 px-10 border border-transparent rounded-md shadow-sm text-sm font-medium text-white"
           >
-            Send
+            <span *ngIf="!loading">Send</span>
+            <span
+              *ngIf="loading && emailDataForm.valid"
+              class="flex justify-center items-center space-x-1"
+            >
+              <div>
+                <svg
+                  aria-hidden="true"
+                  class="w-4 h-4 me-2 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
+                  viewBox="0 0 100 101"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+                    fill="currentColor"
+                  />
+                  <path
+                    d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+                    fill="currentFill"
+                  />
+                </svg>
+                <span class="sr-only">Loading...</span>
+              </div>
+              <span>Sending email...</span>
+            </span>
           </button>
         </div>
       </form>
     </div>
   </div>
+</div>
+
+<div *ngIf="showSuccess && submitted">
+  <app-success></app-success>
 </div>
