--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -82,13 +82,13 @@
         >Projects</a
       > -->
 
-      <!-- <a
-        href="javascript:void(0)"
-        [routerLink]="['/blog']"
+      <a
+        href="https://blog.strangermushwana.com"
+        target="_blank"
         [ngClass]="{ 'font-bold': activeRoute === '/blog' }"
         class="py-2 px-3 block hover:text-gray-500"
         >Blog</a
-      > -->
+      >
       <a
         href="javascript:void(0)"
         [routerLink]="['/contact']"
