updaed links and resume

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -19,15 +19,17 @@
       <h3
         class="text-2xl mx-auto text-center text-gray-600 mt-10 md:mt-[2rem] md:my-4"
       >
-        Software Developer | JavaScript Enthusiast
+        Software Developer | Node.js | Angular | GraphQL | TypeScript | Postgres
       </h3>
 
       <p
-        class="text-left tex-md mx-auto px-10 md:px-0 md:text-xl md:max-w-[30rem] xl:max-w-[40rem] mt-8 text-gray-600"
+        class="text-left tex-md mx-auto px-0 md:text-xl md:max-w-[50rem] mt-4 text-gray-600"
       >
-        I'm a Software Developer based in Cape Town, South Africa 🇿🇦,
-        specializing in building robust, scalable applications using the latest
-        technologies and best practices.
+        I'm a curious and adaptable software engineer who enjoys solving
+        real-world problems through clean, scalable code. I'm passionate about
+        continuous learning, mentoring, and building tools that make a real
+        impact. I thrive in collaborative teams and bring a strong mix of
+        technical depth and a user-focused mindset.
         <br />
       </p>
 
