--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -83,7 +83,7 @@
       > -->
 
       <a
-        href="https://blog.strangermushwana.com"
+        href="https://thedeepend.vercel.app"
         target="_blank"
         [ngClass]="{ 'font-bold': activeRoute === '/blog' }"
         class="py-2 px-3 block hover:text-gray-500"
