--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -20,7 +20,7 @@
         href="javascript:void(0)"
         [routerLink]="['/']"
         class="bg-black text-white font-bold py-3 px-8 rounded"
-        >Hope Page</a
+        >Home Page</a
       >
     </div>
   </div>
