--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="bg-red-400">
+<div class="bg-gray-600">
   <div
     class="flex flex-col justify-end text-white py-3 space-y-1 md:flex-row md:space-y-0 md:space-x-2"
   >
