updated CV and content

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -26,7 +26,7 @@
       </div>
       <h2 class="text-2xl my-6 font-semibold">About me</h2>
       <p class="text-md mt-4">
-        I am a passionate and dedicated software developer with 4 years of
+        I am a passionate and dedicated software developer with 5+ years of
         professional experience in creating and maintaining web applications. My
         expertise lies in full-stack development, with honed skills in both
         front-end and back-end technologies. I have a strong foundation in
