--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -20,7 +20,7 @@
       <h3
         class="flex items-center mb-1 text-lg pb-3 font-semibold text-gray-900"
       >
-        Software Developer at JOBJACK.
+        Senior Software Developer at JOBJACK.
       </h3>
       <time class="block mb-2 text-sm font-normal leading-none text-gray-500"
         >2021 - Current</time
